--- a/chencheng-vue/index.html
+++ b/chencheng-vue/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>chencheng-vue</title>
+    <title>前端开发</title>
+    <!-- <link href="./src/assets/css/common.css" rel="stylesheet" type="text/css" /> -->
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    @import './src/assets/css/style.css';
+  </style>
 </html>
