--- a/chencheng-vue/index.html
+++ b/chencheng-vue/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>前端开发</title>
+    <title>求索</title>
     <!-- <link href="./src/assets/css/common.css" rel="stylesheet" type="text/css" /> -->
   </head>
   <body>
